fixed buttons on mobile safari

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,8 @@ a {
 }
 
 input[type="button"] {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
   background-color: #4c6081;
   color: #ebebeb;
   border: none;
